--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   "dependencies": {
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0"
+  },
+  "scripts": {
+    "start": "node ./app.js"
   }
 }
