--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
   "author": "Slavik3011 <Slavik3011@yandex.ru>",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.3",
-    "express-handlebars": "^3.0.0"
+    "express-fileupload": "^0.4.0",
+    "express-handlebars": "^3.0.0",
+    "faker": "^4.1.0",
+    "method-override": "^2.3.10",
+    "mongoose": "^5.0.12"
   },
   "scripts": {
     "start": "node ./app.js"
